--- a/Visual Studio Project/LonghornAirlines/Views/Account/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/Index.cshtml
@@ -26,6 +26,10 @@
                 ]
 
             </dd>
+            <dt>Edit Account:</dt>
+            <dd>
+                [@Html.ActionLink("Edit your Account", "EditUser")]
+            </dd>
         </dl>
 
 
