--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -9,6 +9,6 @@
     <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
     <a class="btn btn-primary">Gate Agent Functions</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
-    <a class="btn btn-primary" asp-action="Manager" asp-controller="Account">Manage Users</a>
+    <a class="btn btn-primary" asp-action="UserList" asp-controller="Account">Manage Users</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="Report">Reports</a>
 }
