--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -11,4 +11,5 @@
     <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
     <a class="btn btn-primary" asp-action="UserList" asp-controller="Account">Manage Users</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="Report">Reports</a>
+    <a class="btn btn-primary" asp-action="GateAgent">Gate Agent View</a>
 }
