--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model LonghornAirlines.Models.Business.Flight
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Flight";
 }
+@section imageContent{ 
+<h1>Edit Flight</h1>
 
-<h1>Edit</h1>
-
-<h4>Flight</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,11 +16,6 @@
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="hasDeparted" /> @Html.DisplayNameFor(model => model.hasDeparted)
-                </label>
             </div>
             <div class="form-group">
                 <label class="control-label">Pilot</label>
@@ -46,3 +40,4 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+}
