--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 
 @section imageContent
 {
+@ViewBag.ErrorMessage
     <div class="row mt-md-4">
         <div class="col-md-9">
             <div class="card background-card-content">
@@ -26,7 +27,7 @@
                             <div class="col-6">
                                 <div class="form-group">
                                     <label asp-for="DepartDate" class="control-label"></label>
-                                    <input type="date" id="departID" min="2020-04-15" value="ViewBag.Today" max="2020-06-30" asp-for="DepartDate" class="form-control" />
+                                    <input type="date" id="departID" min="2020-04-15"max="2020-06-30" asp-for="DepartDate" class="form-control" />
                                 </div>
                             </div>
                         </div>
@@ -41,7 +42,7 @@
                             <div id="arrD" class="col-6">
                                 <div class="form-group">
                                     <label asp-for="ArriveDate" class="control-label"></label>
-                                    <input type="date" id="arriveID" min="2020-04-15" max="2020-06-30" value="ViewBag.Today" asp-for="ArriveDate" class="form-control" />
+                                    <input type="date" id="arriveID" min="2020-04-15" max="2020-06-30"asp-for="ArriveDate" class="form-control" />
                                 </div>
                             </div>
                         </div>
@@ -65,7 +66,7 @@
                             </div>
                         </div>
                         <div class="form-group float-md-right">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <input class="btn btn-info" type="submit" value="Look for Flights" />"
                         </div>
                     </form>
                 </div>
