--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/ReservationCustomersList.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/ReservationCustomersList.cshtml
@@ -16,6 +16,7 @@
                 <th>
                     Last Name
                 </th>
+                <th>Email</th>
                 <th>
                     Select
                 </th>
@@ -33,6 +34,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
                         @if (User.Identity.IsAuthenticated)
