--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -4,12 +4,17 @@
 @section imageContent
 {
     <h1>Welcome to the Employee Home Page</h1>
-    <a class="btn btn-primary" asp-action="bookForCust" asp-controller="Home">Create Customer Booking</a>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="Reservation">Manage Reservations</a>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
-    <a class="btn btn-primary">Gate Agent Functions</a>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
-    <a class="btn btn-primary" asp-action="UserList" asp-controller="Account">Manage Users</a>
-    <a class="btn btn-primary" asp-action="Index" asp-controller="Report">Reports</a>
-    <a class="btn btn-primary" asp-action="GateAgent">Gate Agent View</a>
+    @if (User.IsInRole("Agent") || User.IsInRole("Manager"))
+    {
+        <a class="btn btn-primary" asp-action="bookForCust" asp-controller="Home">Create Customer Booking</a>
+        <a class="btn btn-primary" asp-action="Index" asp-controller="Reservation">Manage Reservations</a>
+        <a class="btn btn-primary" asp-action="GateAgent" asp-controller="EmployeeViews">Gate Agent View</a>
+        <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
+        <a class="btn btn-primary" asp-action="UserList" asp-controller="Account">Manage Users</a>
+    }
+    @if (User.IsInRole("Manager"))
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
+        <a class="btn btn-primary" asp-action="Index" asp-controller="Report">Reports</a>
+    }
 }
