--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -72,12 +72,12 @@
             </div>
             <div class="mt-4 card background-card-content overflow-auto" style="height: 30vh;">
                 <p>
-
+                    <img class="fa-align-center" src="~/static/UT_Flight_Logo.png"  style="height:29vh"/>
                 </p>
             </div> 
         </div>
         <div class="col-md-3 d-none d-lg-block">
-            <img class="img-fluid w-100" src="~/static/UT_Flight_Ad.png" style="height:75vh;">
+            <img class="fa-align-center" src="~/static/UT_Flight_Ad.png" style="height:75vh;">
         </div>
     </div>
 }
