--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-md" style="background-color: RGB(253,216,71)">
         <a class="navbar-brand" style="color:white" href="/Home">
-            Longhorn Airlines
+            <img src="~/static/UT_Flight_Logo.png" height="80" alt="Longhorn Airlines"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon">
