--- a/Visual Studio Project/LonghornAirlines/Views/Account/UserList.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/UserList.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<RegisterViewModel>
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "List";
 }
 
 <h1>User List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -45,9 +45,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
-            <th>
-                Role: 
-            </th>
+
             <th></th>
         </tr>
     </thead>
@@ -88,9 +86,6 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SSN)
-            </td>
-            <td>
                 @if (User.IsInRole("Customer"))
                 {
                     @Html.Display("Customer")
@@ -103,7 +98,6 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
