--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Details.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Details.cshtml
@@ -95,7 +95,7 @@
         <td>@Html.DisplayFor(ModelItem => f.CoPilot.FullName)</td>
         <td>@Html.DisplayFor(ModelItem => f.Attendant.FullName)</td>
         <td>@Html.DisplayFor(ModelItem => f.hasDeparted)</td>
-        <td><a asp-action="Details" asp-controller="Flights" type="submit" asp-route-id=@f.FlightID>Details</a> | <a asp-action="Edit" asp-controller="Flights" type="submit" asp-route-id=@f.FlightID>Edit</a> | <a asp-action="CheckIn" asp-controller="Flights" asp-route-id=@f.FlightID></a></td>
+        <td><a asp-action="Details" asp-controller="Flights" type="submit" asp-route-id=@f.FlightID>Details</a> | <a asp-action="CheckIn" asp-controller="Flights" asp-route-id=@f.FlightID>Check In</a> | @if (User.IsInRole("Manager")) {<a asp-action="Edit" asp-controller="Flights" type="submit" asp-route-id=@f.FlightID>Edit</a>}  </td>
     </tr>
     }
 
