--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Index.cshtml
@@ -8,7 +8,10 @@
 <h1>Manage Flights</h1>
 
 <p>
-    <a asp-action="Create">Create New Flight Number</a>
+    @if (User.IsInRole("Manager"))
+    {
+        <a asp-action="Create">Create New Flight Number</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -93,9 +96,11 @@
                 @Html.DisplayFor(modelItem => item.Sunday)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.FlightInfoID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.FlightInfoID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.FlightInfoID">Delete</a>
+                @if (User.IsInRole("Manager"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.FlightInfoID">Edit</a> 
+                }
+                <a asp-action="Details" asp-route-id="@item.FlightInfoID">Details</a>
             </td>
         </tr>
 }
