--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/ChangeSeat.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/ChangeSeat.cshtml
@@ -18,13 +18,20 @@
                 <div class="card">
                     Ticket Holder: @Html.DisplayFor(tcm => tcm.CustomerID)
                     @Html.HiddenFor(tcm => tcm.CustomerID)
+                    @Html.HiddenFor(tcm => tcm.TicketID)
                 </div>
             </div>
         </div>
-
-        <p>If upgrading to first class, do you plan on paying with miles for the upgrade?</p>
-        @Html.CheckBoxFor(m => m.UpgradeWithMiles)
-        <a href="#" class="submitForm">Save</a>
+        <div class="card">
+            <div class="card-body">
+                <p>If upgrading to first class, do you plan on paying with miles for the upgrade?</p>
+                @Html.CheckBoxFor(m => m.UpgradeWithMiles)
+            </div>
+            <div class="card-footer">
+                <a href="#" class="submitForm">Save</a>
+            </div>
+        </div>
+        
         <object style="width: 0px; height: 0px;" data="~/static/drawing.svg" type="image/svg+xml" id="house"></object>
 
         <script>
