--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Confirm.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Confirm.cshtml
@@ -40,7 +40,7 @@
                 <td>@t.Seat</td>
                 @if (Model.ReservationMethod == 0)
                 {
-                    <th>@t.GetDiscountedFare</th>
+                    <th>@t.Fare</th>
                 }
                 else
                 {
