--- a/Visual Studio Project/LonghornAirlines/Views/Account/UserList.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/UserList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RegisterViewModel>
+﻿@model IEnumerable<EditViewModel1>
 
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
@@ -84,6 +84,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
+                @Html.HiddenFor(modelItem => item.IDNUM)
             </td>
             <td>
                 @if (User.IsInRole("Customer"))
@@ -96,8 +97,7 @@
                 }
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                <a asp-action="EditUser" asp-controller="Account" asp-route-id=@item.IDNUM >Edit</a>
             </td>
         </tr>
 }
