--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Create.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Create.cshtml
@@ -11,16 +11,16 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                <input class="form-check-input" asp-for="FlightID" /> @Html.DisplayNameFor(model => model.FlightID)
+                </label>
+            </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="hasDeparted" /> @Html.DisplayNameFor(model => model.hasDeparted)
-                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
