--- a/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
@@ -43,6 +43,13 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(m => m.Birthday, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(m => m.Street, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Street, new { @class = "form-control" })
