--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Edit.cshtml
@@ -30,6 +30,11 @@
                 @Html.DropDownList("SelectedAttendant", (SelectList)@ViewBag.Attendants, new { @class = "form-control" })
             </div>
             <div class="form-group">
+                <label asp-for="BaseFare" class="control-label"></label>
+                <input asp-for="BaseFare" class="form-control" />
+                <span asp-validation-for="BaseFare" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
