--- a/Visual Studio Project/LonghornAirlines/Views/Account/EditUser.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/EditUser.cshtml
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="date" id="Birthday" asp-for="Birthday" class="form-control" />
                 @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
             </div>
         </div>
