--- a/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Birthday, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Birthday, new { @class = "form-control" })
+            <input type="date" id="Birthday" asp-for="Birthday" class="form-control" />
         </div>
     </div>
 
