--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <h1>Reservations</h1>
-@if (User.IsInRole("Manager"))
+@if (User.IsInRole("Manager") || (User.IsInRole("Agent")))
 {
-    <h3>Manager View: All Reservations</h3>
+    <h3>Manager / Agent View: All Reservations</h3>
 }
 <h5>To Create a New Reservation, search for flights on the home page!</h5>
 <h6>To change seats, select "Details" on your flight.</h6>
