--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
@@ -46,7 +46,7 @@
         {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ReservationID)
+                @Html.DisplayFor(modelItem => item.ReservationNumber)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tickets.First().Flight.FlightInfo.Route.CityTo.CityName)
