Push for grading

--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Confirm.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Confirm.cshtml
@@ -34,7 +34,7 @@
                 <td>
                     @t.Customer.FirstName
                 </td>
-                <td>@t.Flight.FlightInfo.FlightInfoID</td>
+                <td>@t.Flight.FlightInfo.FlightNumber</td>
                 <td>@t.Flight.Date</td>
                 <td>@t.Flight.FlightInfo.FlightTime</td>
                 <td>@t.Seat</td>
