--- a/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
@@ -56,7 +56,7 @@
             {
                 <tr>
                     <td>
-                        @item.FlightInfo.FlightInfoID
+                        @item.FlightInfo.FlightNumber
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Date)
@@ -77,6 +77,7 @@
                         @item.FlightInfo.FlightTime
                     </td>
                     <td>
+                        
                         @if (User.Identity.IsAuthenticated)
                         {
                             <a asp-controller="Reservation"
